<resources>
    <string name="app_name">GalleryDemo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_00_00">00:00</string>
    <string name="textview">TextView</string>
    <string name="filter_3">Filter 3</string>
    <string name="filter_5">Filter 5</string>
    <string name="filter_1">Filter 1</string>
    <string name="filter_10">Filter 10</string>
    <string name="filter_8">Filter 8</string>
    <string name="filter_9">Filter 9</string>
    <string name="filter_6">Filter 6</string>
    <string name="filter_7">Filter 7</string>
    <string name="filter_2">Filter 2</string>
    <string name="filter_4">Filter 4</string>
    <string name="save">Save</string>
    <string name="filter1">filter</string>
    <string name="details">details</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="like">Like</string>
    <string name="text">text</string>
    <string name="crop">crop</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
</resources>